--- a/app/project/0/styles.css
+++ b/app/project/0/styles.css
@@ -1,5 +1,6 @@
 div {
-  width: 200px;
+  /* width: 200px; */
+  margin-left: 1rem;
   border: 0px 0;
   font-family: Arial, Helvetica, sans-serif;
 }
