--- a/app/project/wiki/encyclopedia/static/encyclopedia/styles.css
+++ b/app/project/wiki/encyclopedia/static/encyclopedia/styles.css
@@ -1,38 +1,39 @@
 body {
-    margin: 0;
-    background-color: white;
+  margin: 0;
+  background-color: white;
 }
 
 code {
-    white-space: pre;
+  white-space: pre;
 }
 
 h1 {
-    margin-top: 0px;
-    padding-top: 20px;
+  margin-top: 0px;
+  padding-top: 20px;
+  padding-left: 0%;
 }
 
 textarea {
-    height: 90vh;
-    width: 80%;
+  height: 90vh;
+  width: 80%;
 }
 
 .main {
-    padding: 10px;
+  padding: 10px;
 }
 
 .search {
-    width: 100%;
-    font-size: 15px;
-    line-height: 15px;
+  width: 100%;
+  font-size: 15px;
+  line-height: 15px;
 }
 
 .sidebar {
-    background-color: #f0f0f0;
-    height: 100vh;
-    padding: 20px;
+  background-color: #f0f0f0;
+  height: 100vh;
+  padding: 20px;
 }
 
 .sidebar h2 {
-    margin-top: 5px;
+  margin-top: 5px;
 }
