--- a/app/project/wiki/encyclopedia/templates/encyclopedia/404.html
+++ b/app/project/wiki/encyclopedia/templates/encyclopedia/404.html
@@ -54,6 +54,7 @@
 </head>
 <body>
   <h1>Page Not Found</h1>
+  <h2>Technology, amirite</h2>
   <p>Sorry, but the page you were trying to view does not exist.</p>
   <!-- go back to  "encyclopedia/index.html" -->
   <a href="{% url 'index' %}">Back to Home</a>
