--- a/app/project/wiki/encyclopedia/templates/index.html
+++ b/app/project/wiki/encyclopedia/templates/index.html
@@ -9,7 +9,7 @@
 
   <ul>
     {% for entry in entries %}
-      <li><a href="{% url 'entry' entry %}" target="_blank">{{ entry }}</a></li>
+      <li><a href="{% url 'entry' entry %}">{{ entry }}</a></li>
     {% endfor %}
   </ul>
 
