--- a/app/project/wiki/encyclopedia/templates/layout.html
+++ b/app/project/wiki/encyclopedia/templates/layout.html
@@ -21,7 +21,7 @@
             Create New Page
           </div>
           <div>
-            Random Page
+            <a href="{% url 'random' %}">Random Page</a>
           </div>
           {% block nav %}
           {% endblock %}
