--- a/app/project/wiki/encyclopedia/templates/create.html
+++ b/app/project/wiki/encyclopedia/templates/create.html
@@ -22,6 +22,13 @@
         width: 1000px;
         padding: 10px;
        }
+    .markdownx {
+      display: flex;
+    }
+    .markdownx-editor {
+      width: 50%;
+      padding: 10px;
+    }
   </style>
   <a href="/">Back</a>
 {% endblock %}
