--- a/app/project/wiki/encyclopedia/templates/layout.html
+++ b/app/project/wiki/encyclopedia/templates/layout.html
@@ -22,6 +22,9 @@
             <a href="{% url 'create' %}">Create New Page</a>
           </div>
           <div>
+            <a href="{% url 'edit' %}">Edit Page</a>
+          </div>
+          <div>
             <a href="{% url 'random' %}">Random Page</a>
           </div>
           {% block nav %}
