--- a/app/project/wiki/encyclopedia/templates/layout.html
+++ b/app/project/wiki/encyclopedia/templates/layout.html
@@ -22,7 +22,7 @@
             <a href="{% url 'create' %}">Create New Page</a>
           </div>
           <div>
-            <a href="{% url 'edit' %}">Edit Page</a>
+            <a href="{% url 'edit_list' %}">Edit Page</a>
           </div>
           <div>
             <a href="{% url 'random' %}">Random Page</a>
