--- a/app/project/wiki/encyclopedia/templates/create.html
+++ b/app/project/wiki/encyclopedia/templates/create.html
@@ -5,30 +5,13 @@
 {% endblock %}
 
 {% block body %}
+  <h1>Create New Page</h1>
   <div class="container">
     <form method="POST" action="">{% csrf_token %}
       {{ form.as_p|safe }}
-      {{ form.media }}
+      {{ form.media|safe }}
     <input class="create" type="submit" name="create" placeholder="Submit">
     </form>
   </div>
-  <style>
-    pre {
-       background: #2e2f2f;
-       border-radius: 5px;
-       padding: 10px;
-       }
-    img{
-        width: 1000px;
-        padding: 10px;
-       }
-    .markdownx {
-      display: flex;
-    }
-    .markdownx-editor {
-      width: 50%;
-      padding: 10px;
-    }
-  </style>
   <a href="/">Back</a>
 {% endblock %}
