--- a/app/project/wiki/encyclopedia/templates/entry.html
+++ b/app/project/wiki/encyclopedia/templates/entry.html
@@ -7,4 +7,5 @@
 {% block body %}
   {% comment %} <h1>{{ title }}</h1> {% endcomment %}
   {{ content|safe }}
+  <a href="/">Back</a>
 {% endblock %}
