--- a/app/project/wiki/encyclopedia/templates/edit.html
+++ b/app/project/wiki/encyclopedia/templates/edit.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+  {% include 'messages.html' %}
   <div class="container">
     <form method="POST" action="">{% csrf_token %}
       {{ form.as_p|safe }}
