Fix markdownx-editor left margin
Bootstrap scss was adding massive left margin and it was only visible when the full viewport was available

--- a/app/project/wiki/encyclopedia/static/styles.css
+++ b/app/project/wiki/encyclopedia/static/styles.css
@@ -33,6 +33,10 @@ img{
   padding: 10px;
 }
 
+.container {
+    margin-left: 0;
+}
+
 .main {
   padding: 10px;
 }
@@ -60,6 +64,7 @@ img{
   background-color: #f0f0f0;
   height: 100vh;
   padding: 20px;
+  max-width: fit-content;
 }
 
 .sidebar h2 {
