br tag, add edit button to entry pages

--- a/app/project/wiki/encyclopedia/templates/create.html
+++ b/app/project/wiki/encyclopedia/templates/create.html
@@ -12,6 +12,6 @@
       {{ form.media|safe }}
     <input class="create" type="submit" name="create" placeholder="Submit">
     </form>
-  </div>
+  </div><br>
   <a href="/">Back</a>
 {% endblock %}
