--- a/app/project/wiki/encyclopedia/templates/edit.html
+++ b/app/project/wiki/encyclopedia/templates/edit.html
@@ -11,6 +11,6 @@
       {{ form.as_p|safe }}
     <input class="create" type="submit" name="create" placeholder="Submit">
     </form>
-  </div>
+  </div><br>
   <a href="/">Back</a>
 {% endblock %}
