--- a/app/project/wiki/encyclopedia/templates/edit.html
+++ b/app/project/wiki/encyclopedia/templates/edit.html
@@ -9,6 +9,7 @@
   <div class="container">
     <form method="POST" action="">{% csrf_token %}
       {{ form.as_p|safe }}
+      {{ form.media|safe }}
     <input class="create" type="submit" name="create" placeholder="Submit">
     </form>
   </div><br>
