--- a/app/project/commerce/auctions/templates/auctions/index.html
+++ b/app/project/commerce/auctions/templates/auctions/index.html
@@ -1,7 +1,4 @@
 {% extends "auctions/layout.html" %}
+{% load bootstrap5 %}
 
-{% block body %}
-    <h2>Active Listings</h2>
-
-    TODO
-{% endblock %}
+{% comment %} show listing title, image, description, price, bids, details (listed by, category) {% endcomment %}
